[tool.poetry]
name = "hori_inn"
version = "0.1.0"
description = ""
authors = ["Gustavo Reis <guto.reisdelima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
